# wasm-js

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: build.md  cargo-toml-configuration.md  getting-started.md  prerequisites.md
docs/_installer/: init.sh
docs/src/: SUMMARY.md  contributing.md  introduction.md  quickstart.md
docs/src/commands/: build.md  index.md
docs/src/prerequisites/: non-rustup-setups.md
example/: .gitignore  Cargo.toml  package-lock.json  package.json  tsconfig.json
example/rust/: lib.rs
example/src/: hello_world.ts  index.ts
npm/: package.json
src/: bindgen.rs  js_bin.rs  lib.rs  lockfile.rs  main.rs  progressbar.rs  target.rs  utils.rs
src/command/: build.rs  mod.rs  utils.rs
src/install/: krate.rs  mod.rs  mode.rs  tool.rs
src/manifest/: mod.rs
src/test/: mod.rs
tests/all/: build.rs  log_level.rs  main.rs  stamps.rs  wasm_opt.rs
tests/all/utils/: fixture.rs
