[package]
name = "wasm-js"
description = "Build rust libraries into vanilla JS that works everywhere"
version = "0.1.0"
authors = ["Matt Timmermans"]
repository = "https://github.com/smallware-io/wasm-js.git"
license = "MIT"
edition = "2021"
readme = "README.md"
categories = ["wasm", "javascript"]
documentation = "https://github.com/smallware-io/wasm-js"

[dependencies]
anyhow = "1.0.68"
base64 = "0.21"
binary-install = "0.4.1"
cargo_metadata = "0.15.2"
chrono = "0.4.23"
console = "0.15.5"
dialoguer = "0.10.3"
env_logger = { version = "0.10.0", default-features = false }
flate2 = "1.0"
glob = "0.3.1"
human-panic = "1.0.3"
log = "0.4.17"
parking_lot = "0.12.1"
semver = "1.0.16"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_ignored = "0.1.7"
serde_json = "1.0.91"
siphasher = "0.3.10"
strsim = "0.10.0"
clap = { version = "4.2.5", features = ["derive"] }
toml = "0.7.3"
ureq = { version = "2.6.2", features = ["json", "socks-proxy"] }
walkdir = "2.3.2"
which = "4.4.0"
path-clean = "1.0.1"

[dev-dependencies]
assert_cmd = "2.0.8"
lazy_static = "1.4.0"
predicates = "3.0.3"
serial_test = "2.0.0"
tempfile = "3.3.0"

