[package]
name = "wasm-js-example"
version = "0.1.0"
edition = "2021"
authors = ["Matt Timmermans <matt@timmermans.org>"]
description = "Example Typescript + wasm rust package"
license = "MIT"
repository = "https://github.com/smallware-io/wasm-js.git"

[lib]
crate-type = ["cdylib"]
path = "rust/lib.rs"

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "console"
]